# SparseTech

./: Cargo.toml  run.sh
src/: client.rs  cmd.rs  main.rs  server.rs
src/server/: service.rs  transport.rs
